Changed grid-template-rows in css to include an auto before 1fr to account for the section with the main content not needing to stretch to fill the page, while allowing a 'blank' row to fill the space between the content and the footer. Will need to solve for row-gap being largr, or find better fix overall. Temporary measure.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ html, body {
     min-height: 100%;
     display: grid;
     grid-template-columns: auto 480px 480px auto;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: auto auto 1fr auto;
     grid-column-gap: 0px;
     grid-row-gap: 40px;
   }
@@ -48,7 +48,7 @@ html, body {
     font-size: 0.7em;
     text-align: center;
     grid-column: 1 / -1;
-    grid-row: 3 / 4;
+    grid-row: 4 / 5;
     align-self: end;
     padding: 30px 0 5px 0;
     color: #cccccc;
